@@ -24,26 +24,21 @@ import java.util.concurrent.TimeUnit;
 
 public class WindowsProcessUtil {
 
-	private static final String TASKLIST = "tasklist";
-	private static final String KILL = "taskkill /F /IM ";
-
 	public static boolean isProcessRunning(String serviceName) throws Exception {
-		Process p = Runtime.getRuntime().exec(TASKLIST);
+		Process p = Runtime.getRuntime().exec(new String[] { "tasklist" });
 		BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
 		String line;
-		while ((line = reader.readLine()) != null)
-			if (line.contains(serviceName))
+		while ((line = reader.readLine()) != null) {
+			if (line.contains(serviceName)) {
 				return true;
+			}
+		}
 		return false;
 	}
 
 	public static void killProcess(String serviceName) throws Exception {
-		Runtime.getRuntime().exec(KILL + serviceName).waitFor(5, TimeUnit.SECONDS);
+		Runtime.getRuntime().exec(new String[] { "taskkill", "/F", "/IM", serviceName }).waitFor(5, TimeUnit.SECONDS);
 		Thread.sleep(500);
-	}
-
-	public static void startProcessAsync(String process) throws Exception {
-		Runtime.getRuntime().exec(process);
 	}
 
 }
