@@ -24,6 +24,7 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 
@@ -144,9 +145,9 @@ public class Plugin implements Comparable<Plugin> {
 
 	public URL toURL() throws MalformedURLException {
 		if (file.isDirectory()) {
-			return (file.toURI().toURL());
+			return file.toURI().toURL();
 		} else {
-			return (new URL("jar:file:" + file.getAbsolutePath() + "!/"));
+			return URI.create("jar:" + file.toURI() + "!/").toURL();
 		}
 	}
 
